# samplespace

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEMO_WORKFLOWS.md  DEVELOPMENT.md  LICENSE  PLAN.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: code-reviewer.md  product-advisor.md  vercel-chatbot-template.md
.claude/hooks/: backend-ruff.py  block-generated-edits.py  frontend-lint.py
.claude/rules/backend/: code-conventions.md  pydantic-ai.md
.claude/rules/frontend/: code-conventions.md  vercel-ai-sdk.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/updating-deps/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/scripts/: create-db-revision-docker.sh  downgrade-db-revision-docker.sh  embed_cnn.py  embed_samples.py  migrate-docker.sh  run_hosted.sh  run_local.sh  seed.py
backend/src/samplespace/: alembic.ini  app.py
backend/src/samplespace/agents/: deps.py  hooks.py  sample_agent.py
backend/src/samplespace/agents/capabilities/: analysis.py  context.py  pairing.py  production.py  search.py
backend/src/samplespace/agents/tools/: analysis_tools.py  clap_tools.py  cnn_tools.py  context_tools.py  formatting.py  kit_tools.py  pair_tools.py  preference_tools.py  transform_tools.py  upload_tools.py  verdict_tools.py
backend/src/samplespace/core/: config.py  paths.py
backend/src/samplespace/dependencies/: clap.py  cnn.py  db.py  openai.py
backend/src/samplespace/migrations/: env.py
backend/src/samplespace/migrations/versions/: 09f754840071_rename_source_values_splice_and_local_.py  2ffdfff5bb86_add_pair_verdicts_and_pair_rules_tables.py  62af95779257_drop_pair_rules_table.py  7d94cdcd4649_change_bpm_column_from_float_to_integer.py  82874d1dc3a2_add_relative_path_source_pack_name_to_.py  90f6bf27aca0_add_hnsw_indexes_for_clap_and_cnn_.py  c1e3a6c19709_add_is_loop_column.py  d3abe583f2da_add_song_context_to_threads.py  e31d10150c8c_add_threads_and_messages_tables.py  f2483c5c35f2_initial_samples_table_with_pgvector.py
backend/src/samplespace/ml/: dataset.py  model.py  predict.py  train.py
backend/src/samplespace/models/: __init__.py  base.py  message.py  pair_rule.py  pair_verdict.py  sample.py  thread.py
backend/src/samplespace/routers/: __init__.py  agent.py  health.py  main.py  samples.py  thread.py
backend/src/samplespace/schemas/: agent_type.py  audio.py  base.py  health_check.py  kit.py  pair.py  pair_rule.py  pair_verdict.py  preference.py  sample.py  sample_source.py  sample_type.py  thread.py
backend/src/samplespace/scripts/: __init__.py  embed_cnn.py  embed_samples.py  seed.py  seed_samples.py  seed_splice.py  train_preferences.py
backend/src/samplespace/services/: audio_analysis.py  audio_transform.py  candidate_search.py  embedding.py  kit_builder.py  kit_preview.py  music_theory.py  pair_features.py  pair_scoring.py  path_inference.py  preference.py  sample.py  spectrogram.py  thread.py  title_generator.py  upload.py
backend/src/samplespace/utils/: logging.py  message_serialization.py
backend/tests/: conftest.py  test_ml_model.py  test_pair_scoring.py  test_preference.py  test_sample_agent_hooks.py
backend/tests/evals/: conftest.py  test_prepare_tools.py  test_sample_agent_evals.py
docs/: DEMO_WORKFLOWS.md  ROADMAP.md  feature-brainstorm.md  preference-learning-flow.md  pydantic-ai-llms-full.txt  vercel-ai-sdk-ui.txt
frontend/: biome.jsonc  next.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/api/: client.ts
frontend/api/hooks/: threads.ts  uploads.ts
frontend/api/scripts/: modifyOpenApiFile.mjs
frontend/api/scripts/outputs/: openapi.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(chat)/: layout.tsx  page.tsx
frontend/app/(chat)/api/chat/: route.ts
frontend/app/(chat)/candidates/: page.tsx
frontend/app/(chat)/chat/[id]/: page.tsx
frontend/app/(chat)/samples/: page.tsx
frontend/app/api/chat/: route.ts
frontend/components/: app-sidebar.tsx  bouncing-dots.tsx  candidate-samples.tsx  chat-actions-provider.tsx  chat-header.tsx  chat-panel.tsx  chat.tsx  data-stream-handler.tsx  greeting.tsx  icons.tsx  message-actions.tsx  message.tsx  messages.tsx  multimodal-input.tsx  preview-attachment.tsx  query-provider.tsx  sample-browser.tsx  sample-detail-panel.tsx  sample-metadata-dialog.tsx  sidebar-history-item.tsx  sidebar-history.tsx  sidebar-toggle.tsx  sidebar-user-nav.tsx  song-context-badge.tsx  tool-call.tsx  waveform-viz.tsx
frontend/components/elements/: audio-block.tsx  kit-block.tsx  kit-preview-block.tsx  message.tsx  pair-verdict-block.tsx  prompt-input.tsx  response.tsx  sample-card.tsx  sample-results-block.tsx  tool-call.tsx
frontend/components/ui/: sidebar.tsx
frontend/hooks/: use-auto-resume.ts  use-messages.tsx  use-scroll-to-bottom.tsx
frontend/lib/: constants.ts  types.ts  utils.ts
scripts/: embed_samples.py  seed.py
