[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samplespace"
version = "0.1.0"
description = "Multi-modal AI-powered tool for music producers to discover and match audio samples"
readme = "../README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "fastapi[standard]>=0.135.3",
  "librosa>=0.11.0",
  "music21>=9.9.1",
  "pgvector>=0.4.2",
  "psycopg[binary,pool]>=3.3.3",
  "pydantic-ai>=1.77.0",
  "pydantic>=2.12.5",
  "scikit-learn>=1.8.0",
  "sqlalchemy[asyncio,mypy]>=2.0.49",
  "torch>=2.11.0",
  "torchaudio>=2.11.0",
  "transformers>=5.5.0",
  "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
  "mypy>=1.20.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "ruff>=0.15.9",
  "tensorboard>=2.20.0",
]

[tool.pytest.ini_options]
markers = [
    "main: marks tests for main demo examples",
    "additional: marks tests for additional demo examples",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["pgvector.*", "librosa.*", "music21.*", "transformers.*", "torchaudio.*", "soundfile", "soundfile.*", "joblib", "joblib.*", "sklearn", "sklearn.*"]
ignore_missing_imports = true


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F401"]

[project.scripts]
seed-samples = "samplespace.scripts.seed_samples:main"
embed-samples = "samplespace.scripts.embed_samples:main"
embed-cnn = "samplespace.scripts.embed_cnn:main"
train-cnn = "samplespace.ml.train:main"
train-preferences = "samplespace.scripts.train_preferences:main"

[tool.uv]
default-groups = ["dev"]
