[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samplespace"
version = "0.1.0"
description = "Multi-modal AI-powered tool for music producers to discover and match audio samples"
readme = "../README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "fastapi[standard]>=0.136.1",
  "librosa>=0.11.0",
  "matplotlib>=3.10.9",
  "pgvector>=0.4.2",
  "psycopg[binary,pool]>=3.3.3",
  "pydantic-ai>=1.87.0",
  "pydantic>=2.13.3",
  "scikit-learn>=1.8.0",
  "sqlalchemy[asyncio,mypy]>=2.0.49",
  "torch>=2.11.0",
  "torchaudio>=2.11.0",
  "transformers>=5.6.2",
  "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
  "mypy>=1.20.2",
  "pre-commit>=4.6.0",
  "pydantic-evals>=1.87.0",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "tensorboard>=2.20.0",
]

[tool.pytest.ini_options]
markers = [
    "eval: marks tests that call a real LLM (opt-in; run with `pytest -m eval`)",
]
addopts = "-m 'not eval'"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["pgvector.*", "torchaudio.*", "soundfile", "joblib", "sklearn", "sklearn.*"]
ignore_missing_imports = true


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F401"]

[project.scripts]
seed-samples = "samplespace.scripts.seed_samples:main"
embed-samples = "samplespace.scripts.embed_samples:main"
embed-cnn = "samplespace.scripts.embed_cnn:main"
train-cnn = "samplespace.ml.train:main"
train-preferences = "samplespace.scripts.train_preferences:main"

[tool.uv]
default-groups = ["dev"]
